# engineering-paper-summarizer

./: README.md  pyproject.toml  setup.py
examples/: basic_usage.py  batch_processing.py
src/engpapersumm/: __init__.py  main.py  summarizer.py
src/engpapersumm/extractors/: pdf.py  section.py
src/engpapersumm/formatters/: pdf.py
src/engpapersumm/generators/: engineers_corner.py  summary.py  takeaways.py
src/engpapersumm/processors/: coherence.py  topic.py  validation.py
src/engpapersumm/utils/: text.py
tests/: test_extractors.py  test_summarizer.py
